--- a/node_http/pubspec.yaml
+++ b/node_http/pubspec.yaml
@@ -8,7 +8,8 @@ environment:
   sdk: '>=2.0.0-dev <3.0.0'
 
 dependencies:
-  http: ^0.11.3
+  http:
+    git: https://github.com/dart-lang/http.git
   node_interop: ^1.0.0-dev
   node_io: ^1.0.0-dev
 
@@ -17,3 +18,7 @@ dev_dependencies:
   build_runner: ^0.9.0
   build_node_compilers: ^0.1.8
   build_test:
+
+dependency_overrides:
+  http:
+    git: https://github.com/dart-lang/http.git
